--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.5.6",
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/native-stack": "^6.9.7",
     "axios": "^0.26.0",
+    "formik": "^2.2.9",
     "native-base": "^3.4.25",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-svg": "^12.1.1"
+    "react-native-screens": "^3.18.2",
+    "react-native-svg": "^12.1.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
